// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SettingItemMin should match snapshot with active Save button 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <img
          alt="profile image"
          className="profile-img"
          src="http://localhost:8065/api/v4/users/src_id"
        />
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <FormattedMessage
          defaultMessage="Upload a picture in BMP, JPG or PNG format. Maximum file size: {max}"
          id="setting_picture.help.profile"
          values={
            Object {
              "max": "200MB",
            }
          }
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-primary"
          onClick={[Function]}
          tabIndex="0"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot with active Save button 2`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <FormattedMessage
          defaultMessage="Upload a picture in BMP, JPG or PNG format. Maximum file size: {max}"
          id="setting_picture.help.profile"
          values={
            Object {
              "max": "200MB",
            }
          }
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-primary"
          onClick={[Function]}
          tabIndex="0"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, on loading picture 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <img
          alt="profile image"
          className="profile-img"
          src="http://localhost:8065/api/v4/users/src_id"
        />
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <FormattedMessage
          defaultMessage="Upload a picture in BMP, JPG or PNG format. Maximum file size: {max}"
          id="setting_picture.help.profile"
          values={
            Object {
              "max": "200MB",
            }
          }
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={true}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={true}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Uploading..."
          className="btn btn-sm btn-inactive disabled"
          onClick={[Function]}
          tabIndex="-1"
        >
          <LoadingWrapper
            loading={true}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, profile picture on file 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <div
          className="profile-img-preview"
        >
          <div
            className="img-preview__image"
          >
            <div
              alt="profile image preview"
              className="profile-img-preview"
              style={
                Object {
                  "backgroundImage": "url(null)",
                }
              }
            />
          </div>
        </div>
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <FormattedMessage
          defaultMessage="Upload a picture in BMP, JPG or PNG format. Maximum file size: {max}"
          id="setting_picture.help.profile"
          values={
            Object {
              "max": "200MB",
            }
          }
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-inactive disabled"
          onClick={[Function]}
          tabIndex="-1"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, profile picture on source 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <img
          alt="profile image"
          className="profile-img"
          src="http://localhost:8065/api/v4/users/src_id"
        />
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <FormattedMessage
          defaultMessage="Upload a picture in BMP, JPG or PNG format. Maximum file size: {max}"
          id="setting_picture.help.profile"
          values={
            Object {
              "max": "200MB",
            }
          }
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-inactive disabled"
          onClick={[Function]}
          tabIndex="-1"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, team icon on file 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <div
          className="team-img-preview"
        >
          <div
            className="img-preview__image"
          >
            <div
              alt="team image preview"
              className="team-img-preview"
              style={
                Object {
                  "backgroundImage": "url(null)",
                }
              }
            />
          </div>
        </div>
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-inactive disabled"
          onClick={[Function]}
          tabIndex="-1"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, team icon on source 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <div
          className="team-img__container"
        >
          <div
            aria-hidden={true}
            className="img-preview__image"
          >
            <img
              alt="team image"
              className="team-img"
              src="http://localhost:8065/api/v4/users/src_id"
            />
          </div>
          <OverlayTrigger
            defaultOverlayShown={false}
            delayShow={400}
            overlay={
              <Tooltip
                bsClass="tooltip"
                id="removeIcon"
                placement="right"
              >
                <div
                  aria-hidden={true}
                >
                  <FormattedMessage
                    defaultMessage="Remove this icon"
                    id="setting_picture.remove"
                    values={Object {}}
                  />
                </div>
              </Tooltip>
            }
            placement="right"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <button
              className="team-img__remove"
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
              >
                ×
              </span>
              <span
                className="sr-only"
              >
                <FormattedMessage
                  defaultMessage="Remove this icon"
                  id="setting_picture.remove"
                  values={Object {}}
                />
              </span>
            </button>
          </OverlayTrigger>
        </div>
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-inactive disabled"
          onClick={[Function]}
          tabIndex="-1"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, user icon on source 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-xs-12 section-title"
  >
    Profile Picture
  </li>
  <li
    className="col-xs-offset-3 col-xs-8"
  >
    <ul
      aria-describedby="setting-picture__helptext"
      aria-label="Profile Picture"
      className="setting-list"
      tabIndex="-1"
    >
      <li
        className="setting-list-item"
        role="presentation"
      >
        <div
          className="profile-img__container"
        >
          <div
            aria-hidden={true}
            className="img-preview__image"
          >
            <img
              alt="profile image"
              className="profile-img"
              src="http://localhost:8065/api/v4/users/src_id"
            />
          </div>
          <OverlayTrigger
            defaultOverlayShown={false}
            delayShow={400}
            overlay={
              <Tooltip
                bsClass="tooltip"
                id="removeIcon"
                placement="right"
              >
                <div
                  aria-hidden={true}
                >
                  <FormattedMessage
                    defaultMessage="Remove profile picture"
                    id="setting_picture.remove_profile_picture"
                    values={Object {}}
                  />
                </div>
              </Tooltip>
            }
            placement="right"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <button
              className="profile-img__remove"
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
              >
                ×
              </span>
              <span
                className="sr-only"
              >
                <FormattedMessage
                  defaultMessage="Remove profile picture"
                  id="setting_picture.remove_profile_picture"
                  values={Object {}}
                />
              </span>
            </button>
          </OverlayTrigger>
        </div>
      </li>
      <li
        className="setting-list-item padding-top x2"
        id="setting-picture__helptext"
        role="presentation"
      >
        <FormattedMessage
          defaultMessage="Upload a picture in BMP, JPG or PNG format. Maximum file size: {max}"
          id="setting_picture.help.profile"
          values={
            Object {
              "max": "200MB",
            }
          }
        />
      </li>
      <li
        className="setting-list-item"
        role="presentation"
      >
        <hr />
        <FormError
          error={null}
          errors={
            Array [
              "",
              "",
            ]
          }
          type="modal"
        />
        <input
          accept=".jpg,.png,.bmp"
          aria-hidden={true}
          className="hidden"
          disabled={false}
          onChange={[Function]}
          tabIndex="-1"
          type="file"
        />
        <button
          aria-label="Select"
          className="btn btn-sm btn-primary btn-file sel-btn"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Select"
            id="setting_picture.select"
            values={Object {}}
          />
        </button>
        <button
          aria-label="Save"
          className="btn btn-sm btn-inactive disabled"
          onClick={[Function]}
          tabIndex="-1"
        >
          <LoadingWrapper
            loading={false}
            text="Uploading..."
          >
            <FormattedMessage
              defaultMessage="Save"
              id="setting_picture.save"
              values={Object {}}
            />
          </LoadingWrapper>
        </button>
        <button
          aria-label="Cancel"
          className="btn btn-link btn-sm theme"
          href="#"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_picture.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;
